<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/log_card_view"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="4dp"
  android:layout_marginStart="4dp"
  android:layout_marginEnd="4dp"
  android:layout_marginLeft="4dp"
  android:layout_marginRight="4dp"
  app:contentPadding="8dp">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/tv_log_contact_name"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@id/tv_log_phone_number"
      android:layout_toRightOf="@id/tv_log_phone_number"
      tools:text="@string/name_hint" />
    <TextView
      android:id="@+id/tv_log_phone_number"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@id/tv_log_contact_name"
      android:textSize="18sp"
      tools:text="@string/phone_hint" />
    <TextView
      android:id="@+id/tv_log_date_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@id/tv_log_phone_number"
      android:textSize="20sp"
      tools:text="@string/date_time_hint" />
    <TextView
      android:id="@+id/tv_log_reminder_reason"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@id/tv_log_date_time"
      tools:text="@string/no_reason_hint" />

    <Button
      android:id="@+id/delete_btn"
      android:layout_width="110dp"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:drawableLeft="@drawable/delete_icon"
      android:drawablePadding="4dp"
      android:drawableStart="@drawable/delete_icon"
      android:text="@string/log_delete_btn" />

  </RelativeLayout>
</android.support.v7.widget.CardView>