<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.aub.callreminder.addreminder.AddReminderActivity">

  <include
    android:id="@+id/toolbar_included"
    layout="@layout/custom_toolbar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_from_contact"
    app:layout_constraintHorizontal_weight="1.2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_included">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_contact_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/et_name_hint" />
  </android.support.design.widget.TextInputLayout>
  <Button
    android:id="@+id/btn_from_contact"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:drawableLeft="@drawable/contact_book"
    android:drawableStart="@drawable/contact_book"
    android:text="@string/contacts_btn_text"
    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintStart_toEndOf="@+id/textInputLayout"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
    tools:ignore="RtlSymmetry" />

  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_contact_phone_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/phone"
      android:drawablePadding="8dp"
      android:drawableStart="@drawable/phone"
      android:hint="@string/phone_number_hint"
      android:inputType="phone" />
  </android.support.design.widget.TextInputLayout>
  <Button
    android:id="@+id/btn_time_picker"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:drawableLeft="@drawable/clock"
    android:drawableStart="@drawable/clock"
    android:text="@string/time_hint"
    app:layout_constraintEnd_toStartOf="@+id/btn_date_picker"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
  <Button
    android:id="@+id/btn_date_picker"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:drawableLeft="@drawable/date"
    android:drawableStart="@drawable/date"
    android:text="@string/date_hint"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintHorizontal_weight="1"
    app:layout_constraintStart_toEndOf="@+id/btn_time_picker"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
  <EditText
    android:id="@+id/et_reminder_reason"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingLeft="8dp"
    android:hint="@string/description_hint"
    android:inputType="textMultiLine|textAutoCorrect"
    android:maxLength="80"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_time_picker" />

  <Button
    android:id="@+id/btn_set_reminder"
    style="@style/SetReminderBtnStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/set_reminder_btn_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_reminder_reason" />
</android.support.constraint.ConstraintLayout>
